@@ -2,6 +2,7 @@ $Id$
 
 2003.02.11
  * API changes in GText (Jacques)
+ * Many bug fix in GText (Benjamin)
 
 In lablgtk2-20030210:
 
